# ArguZ

./: Cargo.toml  LICENSE
src/: agent.rs  helper.rs  main.rs  tools.rs
src/tool/: Cargo_Call.rs  Cat_File.rs  Change_Dir.rs  Command.rs  Create_Dir.rs  Create_File.rs  FIND.rs  GREP.rs  List_Dir.rs  Modify_File.rs  Print_WD.rs  Remove_Dir.rs  Write_File.rs  mod.rs  tools.rs
test/a/: 1.txt
test/a/b/: 2.txt
test/l/n/: 5.txt
