[package]
name = "ArguZ"
description = ""
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
license-file = "LICENSE"

[dependencies]
path-clean = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-printer = "0.2"
